force-app/main/default/objects/Incident/fields/Bank_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Bank_Insurance__c</fullName>
    <inlineHelpText>Insurance proceeds received by the Bank</inlineHelpText>
    <label>Bank Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>