force-app/main/default/objects/Incident/fields/Bank_Loss__c.field-meta.xml
<CustomField>
    <fullName>Bank_Loss__c</fullName>
    <inlineHelpText>Gross financial loss suffered by the Bank before any insurance proceeds or recoveries</inlineHelpText>
    <label>Bank Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>