force-app/main/default/objects/Incident/fields/Bank_of_First_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Bank_of_First_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank of First Deposit</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Customer Fraud Incidents (BOFD)</relationshipLabel>
    <relationshipName>Customer_Fraud_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>