force-app/main/default/objects/Incident/fields/Bank_Recoveries__c.field-meta.xml
<CustomField>
    <fullName>Bank_Recoveries__c</fullName>
    <inlineHelpText>Funds recovered applied to Bank loss</inlineHelpText>
    <label>Bank Recoveries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>