force-app/main/default/objects/Incident/fields/BOFD_Funds_Received__c.field-meta.xml
<CustomField>
    <fullName>BOFD_Funds_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date funds were received from the BOFD</inlineHelpText>
    <label>BOFD Funds Received</label>
    <type>Date</type>
</CustomField>