force-app/main/default/objects/Incident/fields/BOFD_Pending_Claim__c.field-meta.xml
<CustomField>
    <fullName>BOFD_Pending_Claim__c</fullName>
    <label>BOFD Pending Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>