force-app/main/default/objects/Incident/fields/BOFD_Recovery__c.field-meta.xml
<CustomField>
    <fullName>BOFD_Recovery__c</fullName>
    <label>BOFD Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>