force-app/main/default/objects/Incident/fields/Business_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to identify the primary contact at a business where the business is the Primary Customer impacted by the Customer Fraud Incident</inlineHelpText>
    <label>Business Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Fraud Incidents</relationshipLabel>
    <relationshipName>Customer_Fraud_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>