force-app/main/default/objects/Incident/fields/Charge_Off__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off__c</fullName>
    <label>Charge-Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>