force-app/main/default/objects/Incident/fields/Creator_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Creator_Is_Current_User__c</fullName>
    <formula>CreatedBy.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Is Current User</label>
    <type>Checkbox</type>
</CustomField>