force-app/main/default/objects/Incident/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <label>Customer Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Single Customer</fullName>
            </value>
            <value>
                <fullName>Multiple Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>