force-app/main/default/objects/Incident/fields/Customer_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Insurance__c</fullName>
    <inlineHelpText>Insurance proceeds distributed to the customer</inlineHelpText>
    <label>Customer Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>