force-app/main/default/objects/Incident/fields/Customer_Loss__c.field-meta.xml
<CustomField>
    <fullName>Customer_Loss__c</fullName>
    <inlineHelpText>Gross financial loss suffered by the customer(s) before any insurance proceeds or recoveries</inlineHelpText>
    <label>Customer Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>