force-app/main/default/objects/Incident/fields/Customer_Recoveries__c.field-meta.xml
<CustomField>
    <fullName>Customer_Recoveries__c</fullName>
    <inlineHelpText>Funds recovered applied to customer loss</inlineHelpText>
    <label>Customer Recoveries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>