force-app/main/default/objects/Incident/fields/Customers_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Customers_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer(s) Contacted</label>
    <type>Checkbox</type>
</CustomField>