force-app/main/default/objects/Incident/fields/Days_Since_Closure__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Closure__c</fullName>
    <formula>IF(IsClosed = true,(TODAY() - DATEVALUE(EndDateTime)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Closure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>