force-app/main/default/objects/Incident/fields/Financial_Outcome_Determined__c.field-meta.xml
<CustomField>
    <fullName>Financial_Outcome_Determined__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Outcome Determined</label>
    <type>Date</type>
</CustomField>