force-app/main/default/objects/Incident/fields/Financial_Outcome_Pending__c.field-meta.xml
<CustomField>
    <fullName>Financial_Outcome_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the ultimate financial outcome of this incident is not yet settled (i.e. if there are still pending insurance claims or if recoveries are expected within the current fiscal year)</inlineHelpText>
    <label>Financial Outcome Pending</label>
    <type>Checkbox</type>
</CustomField>