force-app/main/default/objects/Incident/fields/Incident_Category__c.field-meta.xml
<CustomField>
    <fullName>Incident_Category__c</fullName>
    <label>Incident Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Misdirected Information</fullName>
            </value>
            <value>
                <fullName>Lost/Stolen Device</fullName>
            </value>
            <value>
                <fullName>Misuse of Access</fullName>
            </value>
            <value>
                <fullName>Compromised Credential</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Social Engineering</fullName>
            </value>
            <value>
                <fullName>Identify Theft</fullName>
            </value>
            <value>
                <fullName>Online Account Takeover</fullName>
            </value>
            <value>
                <fullName>Elder Abuse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>