force-app/main/default/objects/Incident/fields/Initial_Response__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detail the immediate steps taken upon notification of the incident.</inlineHelpText>
    <label>Initial Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>