force-app/main/default/objects/Incident/fields/NPPI_Compromised__c.field-meta.xml
<CustomField>
    <fullName>NPPI_Compromised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPPI Compromised</label>
    <type>Checkbox</type>
</CustomField>