force-app/main/default/objects/Incident/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank-Owned</fullName>
            </value>
            <value>
                <fullName>Personal Device with Bank Access</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>