force-app/main/default/objects/Incident/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Fraud Incidents</relationshipLabel>
    <relationshipName>Customer_Fraud_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>