force-app/main/default/objects/Incident/fields/Primary_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Customer Fraud Incidents</relationshipLabel>
    <relationshipName>Customer_Fraud_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>