force-app/main/default/objects/Incident/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Location</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>