force-app/main/default/objects/Incident/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field will hide this record from any User who is not a member of the team that manages this Incident Record Type.</inlineHelpText>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>