force-app/main/default/objects/Incident/fields/Protected_Funds__c.field-meta.xml
<CustomField>
    <fullName>Protected_Funds__c</fullName>
    <inlineHelpText>Funds which were protected as a result of the Bank&apos;s fraud prevention efforts (i.e. the combined loss that may have been suffered by the Bank and/or the customer had the fraud been successful)</inlineHelpText>
    <label>Protected Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>