force-app/main/default/objects/Incident/fields/Returned_to_BOFD__c.field-meta.xml
<CustomField>
    <fullName>Returned_to_BOFD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the item was returned to the Bank of First Deposit</inlineHelpText>
    <label>Returned to BOFD</label>
    <type>Date</type>
</CustomField>