force-app/main/default/objects/Incident/fields/Secondary_Departments__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Departments__c</fullName>
    <label>Secondary Department(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Departments</valueSetName>
    </valueSet>
</CustomField>