force-app/main/default/objects/Incident/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Sub-Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Incident_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Username/Password</fullName>
            </value>
            <value>
                <fullName>MFA</fullName>
            </value>
            <value>
                <fullName>Facial Recognition</fullName>
            </value>
            <value>
                <fullName>Fingerprint</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Surface/Laptop</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Hard Token</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Zelle</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
            <value>
                <fullName>ATM Deposit</fullName>
            </value>
            <value>
                <fullName>Mobile Deposit</fullName>
            </value>
            <value>
                <fullName>Romance Scam</fullName>
            </value>
            <value>
                <fullName>Email Scam</fullName>
            </value>
            <value>
                <fullName>Other Scam</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>