force-app/main/default/objects/Incident/fields/Total_Financial_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Exposure__c</fullName>
    <inlineHelpText>The total amount of exposure or potential exposure associated with this incident (i.e. any amounts protected by fraud prevention, lost by the Bank or customer, or recovered from insurance/collection efforts would be components of this total figure)</inlineHelpText>
    <label>Total Financial Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>