force-app/main/default/objects/Incident/recordTypes/Customer_Fraud.recordType-meta.xml
<RecordType>
    <fullName>Customer_Fraud</fullName>
    <active>true</active>
    <label>Customer Fraud</label>
</RecordType>