force-app/main/default/objects/Incident/recordTypes/Information_Security.recordType-meta.xml
<RecordType>
    <fullName>Information_Security</fullName>
    <active>true</active>
    <label>Information Security</label>
</RecordType>