force-app/main/default/objects/Incident/recordTypes/Internal_Fraud.recordType-meta.xml
<RecordType>
    <fullName>Internal_Fraud</fullName>
    <active>true</active>
    <label>Internal Fraud</label>
</RecordType>