force-app/main/default/objects/Incident/recordTypes/Physical_Security.recordType-meta.xml
<RecordType>
    <fullName>Physical_Security</fullName>
    <active>true</active>
    <label>Physical Security</label>
</RecordType>