force-app/main/default/objects/Incident/listViews/Information_Security_Incident.listView-meta.xml
<ListView>
    <fullName>Information_Security_Incident</fullName>
    <filterScope>Queue</filterScope>
    <label>Information Security</label>
    <queue>Information_Security</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>