force-app/main/default/objects/Incident/listViews/Physical_Security_Incident.listView-meta.xml
<ListView>
    <fullName>Physical_Security_Incident</fullName>
    <filterScope>Queue</filterScope>
    <label>Physical Security</label>
    <queue>Physical_Security</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>